add exports for macos