@@ -32,6 +32,13 @@ else
   BASE_FOLDER=$0
 fi
 
+if [ "$(uname)" = "Darwin" ]; then
+    EXTRA_OPTIONS='--add-exports java.desktop/com.apple.eawt=ALL-UNNAMED
+      --add-exports java.desktop/com.apple.eio=ALL-UNNAMED
+      --add-exports java.desktop/com.apple.laf=ALL-UNNAMED'
+    echo $EXTRA_OPTIONS
+fi
+
 cd `dirname "$BASE_FOLDER"`
 
 # Starts mucommander.
@@ -45,5 +52,6 @@ $JAVA --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED \
       --add-opens java.sql/java.sql=ALL-UNNAMED \
       --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED \
       --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED \
+      $EXTRA_OPTIONS \
       -Djava.library.path=/usr/local/lib -cp mucommander-@MU_VERSION@.jar com.mucommander.main.muCommander $@
 
